# caen_cli

./: .gitignore  Acquisition.cpp  Acquisition.h  AcquisitionLoop.cpp  AcquisitionSetup.cpp  CMakeLists.txt  CaenScope.cpp  CaenScope.h  README.md  SavingLoop.cpp  Utils.h  bin2root_fileperboard.py  device_tree.json  example_settings.toml  main.cpp
.github/workflows/: cmake-multi-platform.yml
config/: pedestal.toml
src/: Acquisition.cpp  Acquisition.h  AcquisitionLoop.cpp  AcquisitionSetup.cpp  CaenScope.cpp  CaenScope.h  GuiThread.cpp  GuiThread.h  SavingLoop.cpp  Utils.h  main.cpp
